footermenu mobile gap fixed

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ div p {
     text-align: center;
     padding: 0px;
     padding-bottom: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
   }
 
   .footermenu .logo {
